uploading my CV

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <h2>Authors</h2>
 <p>Dainius Jocas (dainiusjocas@gmail.com)<br/><br/>      </p>
 <h2>Contact</h2>
+<a href="C:\Users\Dainius\Documents\NetBeansProjects\xml_webpage\XML\CV - HTML.html">Watch my CV</a>
 <p>Dainius Jocas (dainiusjocas@gmail.com)<br/>      </p>
 
 
@@ -75,6 +76,5 @@
 
   </div>
 
-  <img src="http://img.skitch.com/20100125-fndn896jf6rfj5cs6nfhj9bxiq.jpg"/>
 </body>
 </html>
