--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <br/>
 <br/>      </p>
 <h2>Contact</h2>
-<a href="https://github.com/dainiusjocas/XML/blob/gh-pages/CV%20-%20HTML.html">Watch my CV</a>
 <p>Dainius Jocas (dainiusjocas@gmail.com)
 <br/>      </p>
+<p><a href="https://github.com/dainiusjocas/XML/blob/gh-pages/CV%20-%20HTML.html">Watch my CV</a></p>
 
 
     <h2>Download</h2>
