--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h2>Contact</h2>
 <p>Dainius Jocas (dainiusjocas@gmail.com)
 <br/>      </p>
-<p><a href="https://github.com/dainiusjocas/XML/blob/gh-pages/CV%20-%20HTML.html">Watch my CV</a></p>
+<p><a href="./cv.html">Watch my CV</a></p>
 
 
     <h2>Download</h2>
